fix issue with scroll to top on mobile not visible

--- a/kolplace - Final React Project SoftUni/client/src/components/Navigation/ScrollToTop/ScrollToTop.module.css
+++ b/kolplace - Final React Project SoftUni/client/src/components/Navigation/ScrollToTop/ScrollToTop.module.css
@@ -21,8 +21,8 @@
 
 @media screen and (max-width: 700px) {
   .visible {
-    bottom: 75px;
-    left: 40px;
+    bottom: 100px;
+    left: 20px;
     padding: 8px 12px;
     font-size: 21px;
   }
